[tool.poetry]
name = "polysynergy_nodes_agno"
version = "0.1.2"
description = "Agno Node library for PolySynergy"
authors = ["Dion Snoeijen"]

[tool.poetry.dependencies]
python = "^3.12"
polysynergy_node_runner = { path = "../node_runner", develop = true }
agno = "^2.1.9"
lancedb = "^0.17.0"
exa-py = "^1.14.18"
tweepy = "^4.16.0"
arxiv = "^2.2.0"
pypdf = "^5.8.0"
pycountry = "^24.6.1"
ddgs = "^9"
qdrant-client = "^1.15.1"
python-docx = "^1.2.0"
bs4 = "^0.0.2"
chonkie = "^1.2.1"
psycopg = {extras = ["binary"], version = "^3.2.0"}
openai = "^1.93.0"
openai-agents = "^0.1.0"
mistralai = "^1.0"
huggingface-hub = "^0.20"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"